force-app/main/default/objects/Conduit_Migration_Run_Step__c/Conduit_Migration_Run_Step__c.object-meta.xml
<CustomObject>
    <label>Conduit Migration Run Step</label>
    <nameField>
        <displayFormat>MRS-{00000}</displayFormat>
        <label>Migration Run Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conduit Migration Run Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>