force-app/main/default/objects/Conduit_Migration_Run_Step__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>create</fullName>
            </value>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>skip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>