force-app/main/default/objects/Conduit_Migration_Run_Step__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <label>Entity Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>