force-app/main/default/objects/Conduit_Migration_Run_Step__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>