force-app/main/default/objects/Conduit_Migration_Run_Step__c/fields/Migration_Run__c.field-meta.xml
<CustomField>
    <fullName>Migration_Run__c</fullName>
    <label>Migration Run</label>
    <referenceTo>Conduit_Migration_Run__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>