force-app/main/default/objects/Conduit_Migration_Run_Step__c/fields/Preview_Text__c.field-meta.xml
<CustomField>
    <fullName>Preview_Text__c</fullName>
    <label>Preview Text</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>