force-app/main/default/objects/Conduit_Migration_Run_Step__c/fields/Source_Canonical_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Canonical_Id__c</fullName>
    <label>Source Canonical Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>