force-app/main/default/objects/Conduit_Migration_Run_Step__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Rolled Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>